kube/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: cronjob-dashboard-service
    namespace: cronjob-dashboard
    labels:
        app: cronjob-dashboard-service
spec:
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: webserver-port
  selector:
    app: cronjob-dashboard
  externalTrafficPolicy: Cluster
